tests/errors/runtime/wrong_builtin_arg_type/source.wren
import "ifj25" for Ifj
class Program {
    static main() {
        var a = Ifj.length(123);
    }
}
